--- a/sites/all/themes/atelierstheme/sass/components/_contact.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_contact.scss
@@ -71,6 +71,13 @@
         right: 0;
         left: 0;
     }
+
+    .rouge {
+
+        display: inline;
+        color: red;
+
+    }
 }
 
 .block-contact {
