--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -230,7 +230,6 @@
 
         }
 
-       
     }
 
 .pager {
@@ -294,12 +293,39 @@
 
 .retour {
    @include btn_retour($green);
+
+    margin: 0 auto;
+    display: block;
+
+    @include breakpoint($tablet) {
+        margin: 0 0 0 60px;
+        display: inline-block;
+    }
+
+    @include breakpoint($laptopl) {
+        margin-left: 0;
+        margin-top:60px;
+    }
+
 }
 
 .offre_suivante {
 
-    float: right;
+    margin: 0 auto;
+    display: block;
 
+    @include breakpoint($tablet) {
+        margin: 0 0 0 60px;
+        display: inline-block;
+    }
+
+    @include breakpoint($laptop) {
+        float: right;
+    }
+
+    @include breakpoint($laptopl) {
+        margin-top:60px;
+    }
 }
 
 .reseaux {
@@ -308,7 +334,6 @@
     top:1.5rem;
 
     img {
-        //width: 2vw;
         margin: 0 1rem;
     }
 
