wip : création de la page (+vue) toutes les actus

--- a/sites/all/themes/atelierstheme/sass/components/_contact.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_contact.scss
@@ -53,6 +53,7 @@
         color:white;
         text-transform: uppercase;
         with:100px !important;
+        padding-right: 15px;
 
         @include breakpoint($tablet) {
             width:40%;
