wip : remplacement du header si l'actu est générale (par celui d'actualités au lieu de celui d'un atelier défini)

--- a/sites/all/themes/atelierstheme/sass/components/_atelier-actus.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_atelier-actus.scss
@@ -96,6 +96,12 @@
                 float: right;
              }
 
+            a {
+
+                text-decoration: none;
+
+            }
+
         }
 
     }
