--- a/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
@@ -66,7 +66,7 @@
         }
         a {
             text-decoration: none;
-            padding-bottom: 15px;
+//            padding-bottom: 15px;
         }
         .pictotitlecontainer .pictotitle {
             top: 30%;
