--- a/sites/all/themes/atelierstheme/sass/variables/_typos.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_typos.scss
@@ -22,8 +22,7 @@ h2{
     text-transform: uppercase;
     font-size: 1.2rem;
     font-weight: 700;
-    margin: 0 0 0.5rem 0;
-    //line-height: 3rem;
+    margin: 0.5rem 0 0.5rem 0;
     line-height: 1.5em;
 }
 
