--- a/sites/all/themes/atelierstheme/sass/components/_bloc-grille-base.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_bloc-grille-base.scss
@@ -24,9 +24,9 @@
 
         text-align: center;
 
-        @include breakpoint($tablet) {
-            text-align: left;
-        }
+//        @include breakpoint($tablet) {
+//            text-align: left;
+//        }
     }
 
     img {
